c0vm (final project)/tests/test_arith_and_logic.c0
// #use <util>

//-2147483648
//2147483647

int main () {//add
  //add
  // return 10 + 1;
  // return 127 + 1;

  //sub
  // return 10 - 1;
  // return -128 - 1;

  //mult
  // return 10 * 1;
  // return -64 * 2;//min

  //div
  // return 9/3;
  // return 28/3;
  // return -7/3;
  // return -7/-3;
  // return 7/-3;

  //rem
  // return 0%1
  // return 3%3;
  // return 55%7;
  // return -7%3;
  // return -7%-3;
  // return 7%-3;

  //and
  // return 0x00&0x01;
  // return 0x00&-1;
  // return -1&-1;
  // return 0x07 & -128;

  //or
  // return 0|0;
  // return 1|-2;

  //xor
  // return 0x6F^0x10;
  // return -1^-1;

  //shr
  // return 1>>32; //error
  // return 1>>31;
  // return -2>>1;
  // return -2>>20;

  //shl
  // return 1<<31;
  // return 127<<31;
  // return 0x7F<<20;
  // return -128<<20;

  //mix
  // return (1<<10) - 24;
  return 15 * ((1<<10) - 24) + 122;
}